# rinha-backend-2023

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  mongo-init.js
src/: main.rs
