[package]
name = "rinha-backend-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
mongodb = "2.6.1"
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "rt"] }
